@@ -12,6 +12,8 @@ import org.nmrfx.star.Loop;
 import org.nmrfx.star.ParseException;
 import org.nmrfx.star.Saveframe;
 import org.nmrfx.structure.chemistry.Molecule;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.util.*;
 import java.util.stream.Collectors;
@@ -20,6 +22,8 @@ import java.util.stream.Collectors;
  * @author brucejohnson
  */
 public class SpinSystems {
+    private static final Logger log = LoggerFactory.getLogger(SpinSystems.class);
+
     public enum ClusterModes {
         ALL,
         CORRECT,
@@ -29,7 +33,6 @@ public class SpinSystems {
         EXTRA
     }
 
-    int spinSystemID = 1;
     RunAbout runAbout;
     private List<SpinSystem> systems = new ArrayList<>();
     Map<PeakList, double[]> sums;
@@ -165,34 +168,25 @@ public class SpinSystems {
         return result;
     }
 
-    Map<PeakList, double[]> calcNormalization(List<PeakList> peakLists) {
-        PeakList refList = peakLists.get(0);
+    Map<PeakList, double[]> calcNormalization(PeakList refList, List<PeakList> peakLists) {
         Map<PeakList, double[]> sumMap = new HashMap<>();
-        int i = 0;
         for (Peak pkA : refList.peaks()) {
-            int j = 0;
             for (PeakList peakListB : peakLists) {
                 int[] aMatch = matchDims(refList, peakListB);
                 if (peakListB != refList) {
                     double sumF = peakListB.peaks().stream().filter(pkB -> pkB.getStatus() >= 0).
                             mapToDouble(pkB -> comparePeaks(pkA, pkB, aMatch)).sum();
-                    double[] sumArray = sumMap.get(peakListB);
-                    if (sumArray == null) {
-                        sumArray = new double[refList.size()];
-                        sumMap.put(peakListB, sumArray);
-                    }
+                    double[] sumArray = sumMap.computeIfAbsent(peakListB, k -> new double[refList.size()]);
                     sumArray[pkA.getIndex()] = sumF;
-                    j++;
                 }
             }
-            i++;
         }
         return sumMap;
     }
 
     public void addPeak(SpinSystem spinSys, Peak pkB) {
         if ((sums == null) || (sums.get(pkB.getPeakList()).length != spinSys.rootPeak.getPeakList().size())) {
-            sums = calcNormalization(runAbout.getPeakLists());
+            sums = calcNormalization(runAbout.getRefList(), runAbout.getPeakLists());
         }
         Peak rootPeak = spinSys.rootPeak;
         if (rootPeak != pkB) {
@@ -218,7 +212,6 @@ public class SpinSystems {
     public static boolean[] getUseDims(PeakList refList, List<PeakList> peakLists) {
         boolean[] useDim = new boolean[refList.getNDim()];
         Arrays.fill(useDim, true);
-        int nPeakTypes = 0;
         for (PeakList peakList : peakLists) {
             if (peakList != refList) {
                 int[] aMatch = matchDims(refList, peakList);
@@ -241,7 +234,7 @@ public class SpinSystems {
         allLists.addAll(runAbout.getPeakLists());
         allLists.addAll(newPeakLists);
         runAbout.setPeakLists(allLists);
-        sums = calcNormalization(allLists);
+        sums = calcNormalization(refList, allLists);
         var searchDims = refList.getSearchDims();
         double[] ppm = new double[searchDims.size()];
         int[] refDims = new int[searchDims.size()];
@@ -283,11 +276,14 @@ public class SpinSystems {
         }
     }
 
-    public void assembleWithClustering(PeakList refList, List<PeakList> peakLists) {
-        sums = calcNormalization(peakLists);
+    public void assembleWithClustering(PeakList refList, List<PeakList> peakLists) throws IllegalStateException {
+        sums = calcNormalization(refList, peakLists);
         PeakList.clusterOrigin = refList;
         for (PeakList peakList : peakLists) {
             peakList.unLinkPeaks();
+            if ((peakList != refList) && !sums.containsKey(peakList)) {
+                throw new IllegalStateException("Peaklist " + peakList.getName() + " not setup");
+            }
         }
         boolean[] useDim = getUseDims(refList, peakLists);
         for (PeakList peakList : peakLists) {
@@ -302,12 +298,13 @@ public class SpinSystems {
         }
 
         systems.clear();
-        PeakList.clusterPeaks(peakLists);
-        int i = 0;
+        PeakList.clusterPeaks(peakLists, refList);
+        var searchDim = refList.getSearchDims().get(0);
         for (Peak pkA : refList.peaks()) {
             SpinSystem spinSys = new SpinSystem(pkA, this);
             systems.add(spinSys);
-            for (Peak pkB : PeakList.getLinks(pkA, 0)) {// fixme calculate correct dim
+            var linkedPeaks = PeakList.getLinks(pkA, searchDim.getDim());
+            for (Peak pkB : linkedPeaks) {
                 if (pkA != pkB) {
                     PeakList peakListB = pkB.getPeakList();
                     double[] sumArray = sums.get(peakListB);
@@ -321,47 +318,38 @@ public class SpinSystems {
                     }
                 }
             }
-            i++;
-            int nPeaks = spinSys.peakMatches.size();
         }
     }
 
     public void assemble(List<PeakList> peakLists) {
         systems.clear();
-        peakLists.forEach(peakListA -> peakListA.unLinkPeaks());
-        peakLists.forEach(peakListA -> {
-            // set status to 0 for all active (status >= 0) peaks
-            peakListA.peaks().stream().filter(p -> p.getStatus() >= 0).forEach(p -> p.setStatus(0));
-            int nDim = peakListA.getNDim();
-            for (int i = 0; i < nDim; i++) {
-                SpectralDim sDim = peakListA.getSpectralDim(i);
-            }
-        });
+        peakLists.forEach(PeakList::unLinkPeaks);
+        peakLists.forEach(peakListA ->
+                // set status to 0 for all active (status >= 0) peaks
+                peakListA.peaks().stream().filter(p -> p.getStatus() >= 0).forEach(p -> p.setStatus(0))
+        );
 
-        int spinID = 0;
-        peakLists.forEach(peakListA -> {
-            peakListA.peaks().stream().filter(pkA -> pkA.getStatus() == 0).forEach(pkA -> {
-                SpinSystem spinSys = new SpinSystem(pkA, this);
-                systems.add(spinSys);
-                pkA.setStatus(1);
-                peakLists.stream().filter(peakListB -> peakListB != peakListA).forEach(peakListB -> {
-                    int[] aMatch = matchDims(peakListA, peakListB);
-                    double sumF = peakListB.peaks().stream().filter(pkB -> pkB.getStatus() >= 0).
-                            mapToDouble(pkB -> comparePeaks(pkA, pkB, aMatch)).sum();
-                    peakListB.peaks().stream().filter(pkB -> pkB.getStatus() == 0).
-                            forEach(pkB -> {
-                                double f = comparePeaks(pkA, pkB, aMatch);
-                                if (f > 0.0) {
-                                    double p = f / sumF;
-                                    if (p > 0.0) {
-                                        spinSys.addPeak(pkB, p);
-                                        pkB.setStatus(1);
-                                    }
+        peakLists.forEach(peakListA -> peakListA.peaks().stream().filter(pkA -> pkA.getStatus() == 0).forEach(pkA -> {
+            SpinSystem spinSys = new SpinSystem(pkA, this);
+            systems.add(spinSys);
+            pkA.setStatus(1);
+            peakLists.stream().filter(peakListB -> peakListB != peakListA).forEach(peakListB -> {
+                int[] aMatch = matchDims(peakListA, peakListB);
+                double sumF = peakListB.peaks().stream().filter(pkB -> pkB.getStatus() >= 0).
+                        mapToDouble(pkB -> comparePeaks(pkA, pkB, aMatch)).sum();
+                peakListB.peaks().stream().filter(pkB -> pkB.getStatus() == 0).
+                        forEach(pkB -> {
+                            double f = comparePeaks(pkA, pkB, aMatch);
+                            if (f > 0.0) {
+                                double p = f / sumF;
+                                if (p > 0.0) {
+                                    spinSys.addPeak(pkB, p);
+                                    pkB.setStatus(1);
                                 }
-                            });
-                });
+                            }
+                        });
             });
-        });
+        }));
     }
 
     public List<SpinSystemMatch> compare(SpinSystem spinSystemA, boolean prevMode) {
@@ -381,12 +369,11 @@ public class SpinSystems {
         }
     }
 
-
     public void checkConfirmed() {
         for (SpinSystem spinSys : systems) {
             spinSys.confirmP().ifPresent(spinSystemMatch -> {
                 spinSys.setConfirmP(null);
-                for (SpinSystemMatch spinSystemMatch1: spinSys.spinMatchP) {
+                for (SpinSystemMatch spinSystemMatch1 : spinSys.spinMatchP) {
                     if (spinSystemMatch1.spinSystemB == spinSys) {
                         spinSys.setConfirmP(spinSystemMatch1);
                         break;
@@ -395,7 +382,7 @@ public class SpinSystems {
             });
             spinSys.confirmS().ifPresent(spinSystemMatch -> {
                 spinSys.setConfirmS(null);
-                for (SpinSystemMatch spinSystemMatch1: spinSys.spinMatchS) {
+                for (SpinSystemMatch spinSystemMatch1 : spinSys.spinMatchS) {
                     if (spinSystemMatch1.spinSystemA == spinSys) {
                         spinSys.setConfirmS(spinSystemMatch1);
                         break;
@@ -407,14 +394,8 @@ public class SpinSystems {
 
     public void updateFragments() {
         var fragments = getSortedFragments();
-        for (SeqFragment seqFragment: fragments) {
+        for (SeqFragment seqFragment : fragments) {
             seqFragment.updateSpinSystemMatches();
-        }
-    }
-
-    public void dump() {
-        for (SpinSystem spinSys : systems) {
-            System.out.println(spinSys.toString());
         }
     }
 
@@ -435,38 +416,39 @@ public class SpinSystems {
         compare();
     }
 
+    public List<SpinSystem> getSystems() {
+        return systems;
+    }
+
     public List<SpinSystem> getSystemsByType(ClusterModes clusterMode) {
         return systems.stream().filter(s -> {
                     int extraOrMissing = runAbout.getExtraOrMissing(s);
-                    if (clusterMode == ClusterModes.CORRECT) {
-                        return extraOrMissing == 0;
-                    } else if (clusterMode == ClusterModes.EXTRA) {
-                        return (extraOrMissing & 1) != 0;
-                    } else if (clusterMode == ClusterModes.MISSING) {
-                        return (extraOrMissing & 2) != 0;
-                    } else if (clusterMode == ClusterModes.LONELY) {
-                        return s.peakMatches.size() < 3;
-                    } else if (clusterMode == ClusterModes.MISSING_PPM) {
-                        return !runAbout.getHasAllAtoms(s);
-                    } else {
-                        return true;
-                    }
+                    return switch (clusterMode) {
+                        case ClusterModes.CORRECT -> extraOrMissing == 0;
+                        case ClusterModes.EXTRA -> (extraOrMissing & 1) != 0;
+                        case ClusterModes.MISSING -> (extraOrMissing & 2) != 0;
+                        case ClusterModes.LONELY -> s.peakMatches.size() < 3;
+                        case ClusterModes.MISSING_PPM -> !runAbout.getHasAllAtoms(s);
+                        default -> true;
+                    };
                 }
-        ).collect(Collectors.toList());
+        ).toList();
     }
 
     public List<SeqFragment> getSortedFragments() {
         Set<SeqFragment> fragments = new HashSet<>();
         for (SpinSystem spinSys : systems) {
-            if (spinSys.fragment().isPresent()) {
-                fragments.add(spinSys.fragment().get());
-            }
+            spinSys.fragment().ifPresent(frag -> {
+                if (frag.spinSystemMatches.isEmpty()) {
+                    spinSys.setFragment(null);
+                } else {
+                    fragments.add(frag);
+                }
+            });
         }
-        List<SeqFragment> sortedFragments = fragments.stream().sorted((e1, e2)
+        return fragments.stream().sorted((e1, e2)
                         -> Integer.compare(e2.spinSystemMatches.size(),
-                        e1.spinSystemMatches.size())).
-                collect(Collectors.toList());
-        return sortedFragments;
+                        e1.spinSystemMatches.size())).toList();
     }
 
     public List<SpinSystem> getUnconnectedSpinSystems() {
@@ -519,13 +501,54 @@ public class SpinSystems {
         return Optional.empty();
     }
 
-    void readSTARSaveFrame(Saveframe saveframe) throws ParseException {
-        Loop fragmentLoop = saveframe.getLoop("_Fragments");
-        Loop systemLoop = saveframe.getLoop("_Spin_system");
-        Loop peakLoop = saveframe.getLoop("_Spin_system_peaks");
+    void readSTARPeakInfo(Map<Integer, SpinSystem> systemMap, Loop peakLoop) throws ParseException {
+        List<Integer> peakIDs = peakLoop.getColumnAsIntegerList("ID", -1);
+        List<Integer> peakSpinSystemID = peakLoop.getColumnAsIntegerList("Spin_system_ID", -1);
+        List<Integer> peakListIDColumn = peakLoop.getColumnAsIntegerList("Spectral_peak_list_ID", -1);
+        List<Integer> peakIDColumn = peakLoop.getColumnAsIntegerList("Peak_ID", -1);
+        List<Double> matchScoreColumn = peakLoop.getColumnAsDoubleList("Match_score", 0.0);
+        for (int i = 0; i < peakIDs.size(); i++) {
+            Optional<PeakList> peakListOpt = PeakList.get(peakListIDColumn.get(i));
+            if (peakListOpt.isPresent()) {
+                PeakList peakList = peakListOpt.get();
+                Peak peak = peakList.getPeakByID(peakIDColumn.get(i));
+                SpinSystem spinSystem = systemMap.get(peakSpinSystemID.get(i));
+                if ((spinSystem != null) && (peak != spinSystem.rootPeak)) {
+                    double score = matchScoreColumn.get(i);
+                    spinSystem.addPeak(peak, score);
+                }
+            }
+        }
+    }
 
+    void readSTARMatchInfo(Map<Integer, SpinSystem> systemMap, List<Integer> spinSystemIDs, Map<Integer,
+            SeqFragment> fragmentMap, List<Integer> fragmentIDColumn, Map<SpinSystem, SpinSystem> previousSystems,
+                           Map<SpinSystem, SpinSystem> nextSystems) throws ParseException {
+        for (int i = 0; i < spinSystemIDs.size(); i++) {
+            SpinSystem system = systemMap.get(spinSystemIDs.get(i));
+            SpinSystem nextSystem = nextSystems.get(system);
+            SeqFragment fragment = fragmentMap.get(fragmentIDColumn.get(i));
+            if (fragment != null) {
+                system.setFragment(fragment);
+            }
+            if (nextSystem != null) {
+                for (SpinSystemMatch match : system.getMatchToNext()) {
+                    if ((match.getSpinSystemA() == system) && (match.getSpinSystemB() == nextSystem)) {
+                        if (fragment == null) {
+                            throw new ParseException("Could not parse STAR saveframe. Fragment was null.");
+                        }
+                        fragment.getSpinSystemMatches().add(match);
+                        system.setConfirmS(match);
+                        nextSystem.setConfirmP(match);
+                    }
+                }
+            }
+        }
+
+    }
+
+    Map<Integer, SeqFragment> readSTARFragmentLoop(Loop fragmentLoop) throws ParseException {
         Map<Integer, SeqFragment> fragmentMap = new HashMap<>();
-        Map<Integer, SpinSystem> systemMap = new HashMap<>();
         if (fragmentLoop != null) {
             List<Integer> idColumn = fragmentLoop.getColumnAsIntegerList("ID", -1);
             List<Integer> polymerIDColumn = fragmentLoop.getColumnAsIntegerList("Polymer_ID", -1);
@@ -551,89 +574,71 @@ public class SpinSystems {
             }
 
         }
-        List<SpinSystem> thisSystems = new ArrayList<>();
-        List<SpinSystem> nextSystems = new ArrayList<>();
-        List<SpinSystem> previousSystems = new ArrayList<>();
+        return fragmentMap;
+
+    }
+
+    record SpinSystemInfo(Map<Integer, SpinSystem> systemMap, List<Integer> spinSystemIDs,
+                          List<Integer> fragmentIDColumn,
+                          Map<SpinSystem, SpinSystem> previousSystems, Map<SpinSystem, SpinSystem> nextSystems) {
+
+    }
+
+    SpinSystemInfo readSTARSystemLoop(Loop systemLoop) throws ParseException {
+        List<Integer> spinSystemIDs = systemLoop.getColumnAsIntegerList("ID", -1);
+        List<Integer> peakListIDColumn = systemLoop.getColumnAsIntegerList("Spectral_peak_list_ID", -1);
+        List<Integer> peakIDColumn = systemLoop.getColumnAsIntegerList("Peak_ID", -1);
+        List<Integer> previousIDColumn = systemLoop.getColumnAsIntegerList("Confirmed_previous_ID", -1);
+        List<Integer> nextIDColumn = systemLoop.getColumnAsIntegerList("Confirmed_next_ID", -1);
+        List<Integer> fragmentIDColumn = systemLoop.getColumnAsIntegerList("Fragment_ID", -1);
+        Map<Integer, SpinSystem> systemMap = new HashMap<>();
+        Map<SpinSystem, SpinSystem> nextSystems = new HashMap<>();
+        Map<SpinSystem, SpinSystem> previousSystems = new HashMap<>();
+        for (int i = 0; i < spinSystemIDs.size(); i++) {
+            Optional<PeakList> peakListOpt = PeakList.get(peakListIDColumn.get(i));
+            if (peakListOpt.isPresent()) {
+                PeakList peakList = peakListOpt.get();
+                Peak peak = peakList.getPeakByID(peakIDColumn.get(i));
+                int id = spinSystemIDs.get(i);
+                SpinSystem spinSystem = new SpinSystem(peak, this);
+                systemMap.put(id, spinSystem);
+            }
+        }
+        for (int i = 0; i < spinSystemIDs.size(); i++) {
+            Optional<PeakList> peakListOpt = PeakList.get(peakListIDColumn.get(i));
+            if (peakListOpt.isPresent()) {
+                SpinSystem spinSystem = systemMap.get(spinSystemIDs.get(i));
+                Integer prev = previousIDColumn.get(i);
+                SpinSystem prevSystem = prev != -1 ? systemMap.get(prev) : null;
+                Integer next = nextIDColumn.get(i);
+                SpinSystem nextSystem = next != -1 ? systemMap.get(next) : null;
+                nextSystems.put(spinSystem, nextSystem);
+                previousSystems.put(spinSystem, prevSystem);
+            }
+        }
+        return new SpinSystemInfo(systemMap, spinSystemIDs, fragmentIDColumn, previousSystems, nextSystems);
+    }
+
+    void readSTARSaveFrame(Saveframe saveframe) throws ParseException {
+        Loop fragmentLoop = saveframe.getLoop("_Fragments");
+        Loop systemLoop = saveframe.getLoop("_Spin_system");
+        Loop peakLoop = saveframe.getLoop("_Spin_system_peaks");
+
         if ((systemLoop != null) && (peakLoop != null)) {
-            List<Integer> idColumn = systemLoop.getColumnAsIntegerList("ID", -1);
-            List<Integer> peakListIDColumn = systemLoop.getColumnAsIntegerList("Spectral_peak_list_ID", -1);
-            List<Integer> peakIDColumn = systemLoop.getColumnAsIntegerList("Peak_ID", -1);
-            List<Integer> previousIDColumn = systemLoop.getColumnAsIntegerList("Confirmed_previous_ID", -1);
-            List<Integer> nextIDColumn = systemLoop.getColumnAsIntegerList("Confirmed_next_ID", -1);
-            List<Integer> fragmentIDColumn = systemLoop.getColumnAsIntegerList("Fragment_ID", -1);
-            List<Integer> fragmentIndexColumn = systemLoop.getColumnAsIntegerList("Fragment_index", -1);
-            for (int i = 0; i < idColumn.size(); i++) {
-                Optional<PeakList> peakListOpt = PeakList.get(peakListIDColumn.get(i));
-                if (peakListOpt.isPresent()) {
-                    PeakList peakList = peakListOpt.get();
-                    Peak peak = peakList.getPeakByID(peakIDColumn.get(i));
-                    int id = idColumn.get(i);
-                    SpinSystem spinSystem = new SpinSystem(peak, this);
-                    thisSystems.add(spinSystem);
-                    systemMap.put(id, spinSystem);
-                }
-            }
-            for (int i = 0; i < idColumn.size(); i++) {
-                Optional<PeakList> peakListOpt = PeakList.get(peakListIDColumn.get(i));
-                if (peakListOpt.isPresent()) {
-                    Integer prev = previousIDColumn.get(i);
-                    SpinSystem prevSystem = prev != -1 ? systemMap.get(prev) : null;
-                    Integer next = nextIDColumn.get(i);
-                    SpinSystem nextSystem = next != -1 ? systemMap.get(next) : null;
-                    nextSystems.add(nextSystem);
-                    previousSystems.add(prevSystem);
-                }
-            }
+            SpinSystemInfo spinSystemInfo = readSTARSystemLoop(systemLoop);
+            Map<Integer, SeqFragment> fragmentMap = readSTARFragmentLoop(fragmentLoop);
+            readSTARPeakInfo(spinSystemInfo.systemMap, peakLoop);
 
-
-            idColumn = peakLoop.getColumnAsIntegerList("ID", -1);
-            List<Integer> spinSystemIDColumn = peakLoop.getColumnAsIntegerList("Spin_system_ID", -1);
-            peakListIDColumn = peakLoop.getColumnAsIntegerList("Spectral_peak_list_ID", -1);
-            peakIDColumn = peakLoop.getColumnAsIntegerList("Peak_ID", -1);
-            List<Double> matchScoreColumn = peakLoop.getColumnAsDoubleList("Match_score", 0.0);
-            for (int i = 0; i < idColumn.size(); i++) {
-                Optional<PeakList> peakListOpt = PeakList.get(peakListIDColumn.get(i));
-                if (peakListOpt.isPresent()) {
-                    PeakList peakList = peakListOpt.get();
-                    Peak peak = peakList.getPeakByID(peakIDColumn.get(i));
-                    SpinSystem spinSystem = systemMap.get(spinSystemIDColumn.get(i));
-                    if (peak != spinSystem.rootPeak) {
-                        double score = matchScoreColumn.get(i);
-                        spinSystem.addPeak(peak, score);
-                    }
-                }
-            }
-            systems = systemMap.values().stream().
+            systems = spinSystemInfo.systemMap.values().stream().
                     sorted(Comparator.comparingInt(SpinSystem::getId)).collect(Collectors.toList());
             for (SpinSystem spinSystem : systems) {
                 spinSystem.updateSpinSystem();
             }
             compare();
-
-            for (int i = 0; i < systems.size(); i++) {
-                SpinSystem system = thisSystems.get(i);
-                SpinSystem nextSystem = nextSystems.get(i);
-                SeqFragment fragment = fragmentMap.get(fragmentIDColumn.get(i));
-                if (fragment != null) {
-                    system.setFragment(fragment);
-                }
-                if (nextSystem != null) {
-                    // find match that is to next, confirm and add to a fragment
-                    for (SpinSystemMatch match : system.getMatchToNext()) {
-                        if ((match.getSpinSystemA() == system) && (match.getSpinSystemB() == nextSystem)) {
-                            if (fragment == null) {
-                                throw new ParseException("Could not parse STAR saveframe. Fragment was null.");
-                            }
-                            fragment.getSpinSystemMatches().add(match);
-                            system.setConfirmS(match);
-                            nextSystem.setConfirmP(match);
-                        }
-                    }
-                }
-            }
+            readSTARMatchInfo(spinSystemInfo.systemMap, spinSystemInfo.spinSystemIDs, fragmentMap, spinSystemInfo.fragmentIDColumn, spinSystemInfo.previousSystems, spinSystemInfo.nextSystems);
         }
-
     }
+
     public void trimAll() {
         for (SpinSystem spinSystem : systems) {
             runAbout.trim(spinSystem);
@@ -653,7 +658,7 @@ public class SpinSystems {
         for (PeakList peakList : runAbout.peakLists) {
             peakList.clearAtomLabels();
         }
-        getSortedFragments().forEach(frag -> frag.thawFragment());
+        getSortedFragments().forEach(SeqFragment::thawFragment);
     }
 
     public void clearAll() {
